--- a/LibraryView/Views/Author/Index.cshtml
+++ b/LibraryView/Views/Author/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="Author" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Birth)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                <a asp-controller="Author" asp-action="Details" asp-route-id="@item.AuthorId">Details</a>
+                <a asp-controller="Author" asp-action="Edit" asp-route-id="@item.AuthorId">Edit</a>
+                <a asp-controller="Author" asp-action="Delete" asp-route-id="@item.AuthorId">Delete</a>
             </td>
         </tr>
 }
