--- a/LibraryView/Views/Author/Index.cshtml
+++ b/LibraryView/Views/Author/Index.cshtml
@@ -3,7 +3,17 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="container">
+    <h1>Đọc Sách Trực Tuyến</h1>
+    <button class="btn-read" onclick="openBook()">Đọc Sách</button>
+</div>
 
+<script>
+    // JavaScript để điều hướng đến trang đọc sách
+    function openBook() {
+        window.location.href = "https://online.fliphtml5.com/eohou/bonj/#p=6";
+    }
+</script>
 <h1>Index</h1>
 
 <p>
