--- a/LibraryView/Views/Author/Edit.cshtml
+++ b/LibraryView/Views/Author/Edit.cshtml
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Book" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
