--- a/LibraryBlazorWasm/Layout/NavMenu.razor
+++ b/LibraryBlazorWasm/Layout/NavMenu.razor
@@ -20,12 +20,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="book">
+            <NavLink class="nav-link" href="listBook">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Index Book
             </NavLink>
         </div>
