--- a/LibraryBlazorWasm/Components/NavbarComponents/NavbarSearch.razor
+++ b/LibraryBlazorWasm/Components/NavbarComponents/NavbarSearch.razor
@@ -7,7 +7,7 @@
             <input class="form-control" style="width:700px" type="search" placeholder="Search" aria-label="Search">
             <button style="background-color:#3E5962; color:white" class="px-3" type="submit"><i class="bi bi-search"></i></button>
         </form>
-        <a class="ms-5 me-5  col-1 btn" style="width: 50px; text-align: center; display: flex; justify-content: center; align-items: center;">
+        <a href="/shoping/carts" class="ms-5 me-5  col-1 btn" style="width: 50px; text-align: center; display: flex; justify-content: center; align-items: center;">
             <i class="bi bi-cart-plus" style="font-size: 2em;"></i>
         </a>
     </div>
