--- a/LibraryBlazorWasm/App.razor
+++ b/LibraryBlazorWasm/App.razor
@@ -10,3 +10,12 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+@code {
+    [Inject] NavigationManager NavigationManager { get; set; }
+
+    protected override void OnInitialized()
+    {
+        NavigationManager.NavigateTo("/main/book");
+    }
+}
