--- a/LibraryBlazorWasm/Components/NavbarComponents/NavbarAccount.razor
+++ b/LibraryBlazorWasm/Components/NavbarComponents/NavbarAccount.razor
@@ -1,38 +1,40 @@
-﻿<nav class="navbar navbar-expand-lg  bg-body-tertiary w-100">
-    <div class="container-fluid px-0">    
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav  me-auto mb-2 mb-lg-0" style="font-size:14px">
-                <li class="nav-item">
-                    <a class="nav-link active text-secondary" aria-current="page" href="#">STORES & EVNETS | </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active text-secondary" aria-current="page" href="#">MEMBERSHIP | </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary" href="#">B&N READS BLOG | </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary" href="#">PODCAST | </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary" href="#">SWEEPSTAKES | </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary" href="#">GIFT CARDS</a>
-                </li>
-            </ul>
+﻿
+    <nav class="navbar navbar-expand-lg  bg-body-tertiary w-100">
+        <div class="container-fluid px-0">
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav  me-auto mb-2 mb-lg-0" style="font-size:14px">
+                    <li class="nav-item">
+                        <a class="nav-link active text-secondary" aria-current="page" href="#">STORES & EVNETS | </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-secondary" aria-current="page" href="#">MEMBERSHIP | </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-secondary" href="#">B&N READS BLOG | </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-secondary" href="#">PODCAST | </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-secondary" href="#">SWEEPSTAKES | </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-secondary" href="#">GIFT CARDS</a>
+                    </li>
+                </ul>
 
-            <ul class="navbar-nav" style="font-size:14px">
-                <li class="nav-item">
-                    <a class="nav-link active text-secondary" aria-current="page" href="#">MY ACCOUNT | </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary" href="#">WISHLIST</a>
-                </li>
-            </ul>
+                <ul class="navbar-nav" style="font-size:14px">
+                    <li class="nav-item">
+                        <a class="nav-link active text-secondary" aria-current="page" href="/login">MY ACCOUNT | </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-secondary" href="#">WISHLIST</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+
 @code {
 
 }
