--- a/LibraryBlazorWasm/Components/login/Login.razor
+++ b/LibraryBlazorWasm/Components/login/Login.razor
@@ -1,4 +1,4 @@
-﻿
+﻿@page "/login"
 <!-- Pills navs -->
 <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
     <li class="nav-item" role="presentation">
